--- a/main.html
+++ b/main.html
@@ -10,6 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	  <div class="para1">
+        <p>Pragraph 1</p>
+      </div>
+      <div>
+       <p>Pragraph 2</p>
+      </div>
+      <div class="para3">
+       <p>Pragraph 3</p>
+      </div>
+      <div>
+        <p>Pragraph 4</p>
+      </div>
+     
 
 </body>
 
